# adev-api

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
about/: models.py
about/migrations/: 0001_initial.py
api/: urls.py  views.py
common/: models.py
contact/: models.py  signals.py  urls.py  views.py
contact/api/: serializers.py
contact/migrations/: 0001_initial.py
contact/templates/contact/: email.html
core/: asgi.py  celery.py  urls.py
core/settings/: base.py  development.py  production.py
project/: admin.py  models.py  serializers.py  urls.py  views.py
project/api/: custom_tag_serializer.py  serializers.py
project/migrations/: 0001_initial.py  0002_tag_project_is_deleted_alter_project_body.py  0003_alter_project_image.py  0004_project_tags.py  0005_alter_project_image_alter_project_tags_and_more.py  0006_alter_project_tags.py  0006_project_featured_alter_project_tags.py  0007_merge_20221008_1539.py
requirements/: base.txt  local.txt
skill/: admin.py  models.py  urls.py  views.py
skill/api/: serializers.py
skill/migrations/: 0001_initial.py  0002_alter_skill_description.py  0003_skill_proficiency.py
