[metadata]
name = ADev Tutorials
description = Portfolio website for ADev Tutorials
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abbasa5251/Abbasa5251


[flake8]
max-line-length = 100
exclude = .tox,.git,,*/migrations/*,*env*,*venv*,__pycache__,*/static/*,*/media/*,*/mediafiles/*,*/staticfiles/*,node_modules

[isort]
profile = black
atomic = true
line_length = 100
skip_gitignore = true
skip = venv/
multi_line_output = 3
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
default_section = THIRDPARTY
known_first_party = django
